# dionysus

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/.sqlx/: query-2b2bce8098e63b806d7facd84b6b9403ce662ac0c9487a0600535103642b2feb.json  query-2d3ad6d512849c3f41bf43c0da5041a7da5a781cb868ee25324c45d22cb94daa.json  query-35e530003367711eb18d61af9293cad5e9aec79fca64efa91a9d07ef56efb589.json  query-42a6600727004b9ac4e133fd6a8aea68d63ace765c9b2d48f4180606c3899fd9.json  query-4a0d07983cac9e71758282ddc08f289cf3f66811b5fca2fc362fb92c5aa2e1ec.json  query-5c40c5497fdb918631ad43b293843f57d7cfed8ae091b5ff6e224bb64921654c.json  query-7f896bdfe70bd1205e99485e5320cd72e4d5ebfbd8f005d9fbfe1aa0c0b8dd30.json  query-7fbc5ad55984184178c361f404b8062f898f7d26df064f1533360575f678461f.json  query-899199b17d2ae4ba37e1fc5ff6caea42c79e16a2adf51774aeee3be477e38a3f.json  query-b93f8bff090e8d1b7f3d83cd78ad12f60594b1d1da848c993f451cc254aff387.json  query-bd05cb623734918f5559602113cd237867a84f0dc022ad9aa23627632eff4e4e.json  query-d13f90f6fbfe91e3749a5ffa0aa9c0c80ef51b7c65fab68f491074bf86bd5cde.json  query-e0f450f1b9bbcc99e25635e863897f140b597c47a9c242e4f8b992bface87a95.json  query-fbf3fbc6f12bb5c25f8a1a36fccff25e1655935f62aba62f2ebdf8105c6bf74e.json
backend/config/: default.toml  dev.toml
backend/migrations/: 20260201105612_init.sql
backend/src/: app.rs  auth.rs  config.rs  db.rs  logging.rs  main.rs  rooms.rs  state.rs  ws.rs
backend/src/auth/: oidc.rs  (+3 more)
(+62 files in other folders)
