[package]
name = "backend"
version = "0.1.0"
authors = [ "Fredrik Blomqvist", "Emil Hultcrantz" ]
edition = "2024"

[dependencies]
# async
tokio = { version = "1", features = [ "full" ] }
futures-util = "0.3.31"
async-trait = "0.1.89"

# web
axum = "0.8"
axum-extra = { version = "0.12.5", features = [ "cookie" ] }
tower-http = { version = "0.6.8", features = [ "fs" ]}

# database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }

# types
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1", features = [ "v4", "serde" ] }
chrono = { version = "0.4", features = [ "serde" ] }

# error handling / config
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"

# crdt
yrs = "=0.18.8" # pinned to compatable version of yrs-axum
yrs-axum = "0.8.2"
rand = "0.9.2"

